# text-rendering

./: Cargo.toml  README.md
src/: bezier.rs  consts.rs  font.rs  main.rs  misc.rs  render.wgsl
src/shaders/: line.wgsl  render.wgsl
